Fixing layout bug

--- a/src/components/Layout/layout.sass
+++ b/src/components/Layout/layout.sass
@@ -31,6 +31,12 @@ body
     background-color: $lightBg
     color: $lightText
 
+::selection
+  background: $accent
+
+::-moz-selection
+  background: $accent
+
 [hidden],
 template
   display: none
